page menu sticky (80 / 0) & z-index fix

--- a/common-assets/amadeusweb-network.css
+++ b/common-assets/amadeusweb-network.css
@@ -8,7 +8,4 @@ body.site-amadeusweb { --cnvs-footer-bg: rgb(181, 238, 238); --after-content-bac
 body.site-amadeuswebworld.theme-canvas, .site-amadeuswebworld #content { --cnvs-body-bg: cornsilk; }
 body.site-amadeuswebworld { --cnvs-footer-bg: rgb(241, 229, 178); --after-content-background: rgb(250, 246, 229); }
 
-
 body.no-slider #header:not(.not-dark), body.no-slider #header #header-wrap:not(.not-dark) { background-color: var(--no-slider-background); }
-
-.device-xs #header-wrap #logo img { height: auto; }
